src/main/java/com/example/chuchu/common/errors/exception/ForbiddenException.java
package com.example.chuchu.common.errors.exception;

public class ForbiddenException extends RuntimeException {

    public ForbiddenException(String message) {
        super(message);
    }

    public ForbiddenException(String message, Throwable cause) {
        super(message, cause);
    }
}
